Fix mobile cutoff by setting viewport to 1400px and removing overflow hidden

--- a/eden-cosmetics/eden_styles.css
+++ b/eden-cosmetics/eden_styles.css
@@ -32,7 +32,6 @@ body {
     background-color: var(--white);
     line-height: 1.6;
     -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
 }
 
 img {
